--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="title_activity_config_session">configSessionActivity</string>
     <string name="title_activity_track_workut">TrackWorkutAct</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_edit_routine">Edit routine</string>
 
 </resources>
