--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="action_settings">Settings</string>
 
     <string-array name="categories">
-        <item>History</item>
         <item>Your Routine</item>
-        <item>Track A Workout</item>
+        <item>History</item>
+        <item>test</item>
     </string-array>
 
     <string name="title_activity_history">HistoryAct</string>
@@ -25,5 +25,9 @@
     <string name="title_activity_track_workut">TrackWorkutAct</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_edit_routine">Edit routine</string>
+    <string name="title_activity_detailed_history">DetailedHistoryAct</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
 
 </resources>
