--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="title_activity_edit_routine">Edit Your Routine</string>
+    <string name="title_activity_add_custom_exercise">AddCustomExerciseActivity</string>
 
 </resources>
