added achievements, fixed bugs when user has no internet connection on startup, updated activeandroid, user material design dialogs,fixed nav drawer margin issue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,9 +42,11 @@
     <string name="title_activity_update_session">UpdateSessionActivity</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="app_id">742974178487</string>
+    <string name="achievement_beginner">CgkIt4nZ5c8VEAIQBg</string>
     <string name="achievement_lift_big">CgkIt4nZ5c8VEAIQAQ</string>
     <string name="achievement_lift_bigger">CgkIt4nZ5c8VEAIQAg</string>
     <string name="achievement_lift_huge">CgkIt4nZ5c8VEAIQAw</string>
+    <string name="achievement_lift_like_a_machine">CgkIt4nZ5c8VEAIQBQ</string>
     <string name="leaderboard_score">CgkIt4nZ5c8VEAIQBA</string>
 
 </resources>
